# iris

./: Cargo.toml  LICENSE  README.md
src/: cipher.rs  constants.rs  default_wordlist.rs  errors.rs  files.rs  iris_channel_stream.rs  iris_stream.rs  iris_tcp_stream.rs  lib.rs  passphrase.rs  progress.rs  receiver.rs  room_mapping.rs  sender.rs  server.rs
src/cipher/: aes256gcm.rs  xchacha20poly1305.rs
tests/: iris_test_matching_message.rs  iris_test_no_consecutive_same_io.rs
