[package]
name = "iris"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.4", features = ["derive"], optional = true }
jwalk = "0.8.1"
rand = "0.8.5"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
spake2 = "0.4.0"
thiserror = "1.0.61"
threadpool = "1.8.1"
tracing = "0.1.40"
usize_cast = "1.1.0"

[features]
clap = ["dep:clap"]
